[gd_scene load_steps=7 format=3 uid="uid://b14khihs4pq00"]

[ext_resource type="Script" uid="uid://ba7csyf6go1lt" path="res://Autoload/persistent_data.gd" id="1_xkn7a"]
[ext_resource type="PackedScene" uid="uid://dwqnhjcpcpqrw" path="res://UserInterface/weapon_icon.tscn" id="2_ld2up"]
[ext_resource type="PackedScene" uid="uid://c8y8tngdr84yp" path="res://Assets/3D_Assets/Character/Gear/Broken_Sword.glb" id="3_5qaap"]
[ext_resource type="PackedScene" uid="uid://cnd5ly6vtts0m" path="res://UserInterface/shield_icon.tscn" id="4_k00sn"]
[ext_resource type="PackedScene" uid="uid://bvfvolh5sov7g" path="res://UserInterface/armor_icon.tscn" id="5_5qaap"]
[ext_resource type="PackedScene" uid="uid://dwnx2l3uyn732" path="res://Assets/3D_Assets/Character/Gear/Short_Shield.glb" id="5_k00sn"]

[node name="PersistentData" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_xkn7a")

[node name="InventoryNodes" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="WeaponNode" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="WeaponIcon" parent="WeaponNode" instance=ExtResource("2_ld2up")]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
power = 2
item_model = ExtResource("3_5qaap")

[node name="ShieldNode" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="ShieldIcon" parent="ShieldNode" instance=ExtResource("4_k00sn")]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
protection = 4
item_model = ExtResource("5_k00sn")

[node name="ArmorNode" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="ArmorIcon" parent="ArmorNode" instance=ExtResource("5_5qaap")]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
protection = 10
